--- a/page1.html
+++ b/page1.html
@@ -58,9 +58,9 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="mbr-section mbr-section--relative mbr-parallax-background mbr-after-navbar" id="msg-box5-f" data-rv-view="18" style="background-image: url(assets/images/copy-of-roadshow-teaser-3-1586x1008.jpg);">
+<section class="engine"><a href="https://mobirise.info/g">build your own site</a></section><section class="mbr-section mbr-section--relative mbr-parallax-background mbr-after-navbar" id="msg-box5-f" data-rv-view="18" style="background-image: url(assets/images/copy-of-roadshow-teaser-3-1586x1008.jpg);">
     
-    <div class="mbr-section__container mbr-section__container--isolated container" style="padding-top: 62px; padding-bottom: 31px;">
+    <div class="mbr-section__container mbr-section__container--isolated container" style="padding-top: 62px; padding-bottom: 62px;">
         <div class="row">
             <div class="mbr-box mbr-box--fixed mbr-box--adapted">
                 <div class="mbr-box__magnet mbr-box__magnet--top-right mbr-section__left col-sm-6 image-size" style="width: 10%;">
