--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="mbr-navbar__column mbr-navbar__column--s mbr-navbar__brand">
                     <span class="mbr-navbar__brand-link mbr-brand mbr-brand--inline">
                         <span class="mbr-brand__logo"><a href="http://www.sdcoe.net" target="_blank"><img src="assets/images/sdcoe-logo-reverse-168x128.png" class="mbr-navbar__brand-img mbr-brand__img" alt="SDCOE Logo, Future without Boundaries" title="SDCOE Future Without Boundaries"></a></span>
-                        
+                        <span class="mbr-brand__name"><a class="mbr-brand__name text-white" href="https://mobirise.com">Educational Technology Roadshow</a></span>
                     </span>
                 </div>
                 <div class="mbr-navbar__hamburger mbr-hamburger"><span class="mbr-hamburger__line"></span></div>
@@ -59,7 +59,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background" id="header4-3" data-rv-view="2" style="background-image: url(assets/images/copy-of-roadshow-teaser-7-1579x750.jpg);">
+<section class="engine"><a href="https://mobirise.info/b">create a site for free</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background" id="header4-3" data-rv-view="2" style="background-image: url(assets/images/copy-of-roadshow-teaser-7-1579x750.jpg);">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center mbr-after-navbar">
         
         <div class="mbr-box__container mbr-section__container container">
