--- a/page1.html
+++ b/page1.html
@@ -41,7 +41,7 @@
                 <div class="mbr-navbar__column mbr-navbar__column--s mbr-navbar__brand">
                     <span class="mbr-navbar__brand-link mbr-brand mbr-brand--inline">
                         <span class="mbr-brand__logo"><a href="http://www.sdcoe.net" target="_blank"><img src="assets/images/sdcoe-logo-reverse-168x128.png" class="mbr-navbar__brand-img mbr-brand__img" alt="SDCOE Logo, Future without Boundaries" title="SDCOE Future Without Boundaries"></a></span>
-                        
+                        <span class="mbr-brand__name"><a class="mbr-brand__name text-white" href="https://mobirise.com">Educational Technology Roadshow</a></span>
                     </span>
                 </div>
                 <div class="mbr-navbar__hamburger mbr-hamburger"><span class="mbr-hamburger__line"></span></div>
@@ -58,7 +58,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build your own site</a></section><section class="mbr-section mbr-section--relative mbr-parallax-background mbr-after-navbar" id="msg-box5-f" data-rv-view="18" style="background-image: url(assets/images/copy-of-roadshow-teaser-3-1586x1008.jpg);">
+<section class="engine"><a href="https://mobirise.info/h">how to create a web page for free</a></section><section class="mbr-section mbr-section--relative mbr-parallax-background mbr-after-navbar" id="msg-box5-f" data-rv-view="18" style="background-image: url(assets/images/copy-of-roadshow-teaser-3-1586x1008.jpg);">
     
     <div class="mbr-section__container mbr-section__container--isolated container" style="padding-top: 62px; padding-bottom: 62px;">
         <div class="row">
