--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive website templates</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background" id="header4-3" data-rv-view="2" style="background-image: url(assets/images/background-roadshow-website-1579x750.jpg);">
+<section class="engine"><a href="https://mobirise.info/n">simple website templates</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background" id="header4-3" data-rv-view="2" style="background-image: url(assets/images/background-roadshow-website-1579x750.jpg);">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center mbr-after-navbar">
         
         <div class="mbr-box__container mbr-section__container container">
@@ -246,7 +246,7 @@
                         <p class="mbr-contacts__text"><strong>CONTACT</strong><br>
 Email: pamela.rabin@sdcoe.net<br><a href="http://twitter.com/pamrabin" target="_blank" class="text-info">@pamrabin</a><br><br></p>
                     </div>
-                    <div class="col-sm-4"><p class="mbr-contacts__text"><strong>LINKS</strong></p><ul class="mbr-contacts__list"><li><a class="mbr-contacts__link text-white" href="https://mobirise.com/">Website builder</a></li><li><a class="mbr-contacts__link text-white" href="https://mobirise.com/mobirise-free-win.zip">Download for Windows</a></li><li><a class="mbr-contacts__link text-white" href="https://mobirise.com/mobirise-free-mac.zip">Download for Mac</a></li></ul></div>
+                    <div class="col-sm-4"><p class="mbr-contacts__text"><strong>LINKS</strong></p><ul class="mbr-contacts__list"><li><a href="http://innovatesd.org" target="_blank" class="text-info">innovatesd.org</a></li><li><a href="http://summit2020.innovatesd.org" target="_blank" class="text-info">summit2020.innovatesd.org</a></li><li><a href="http://www.sdcoe.net" target="_blank" class="text-info">www.sdcoe.net</a></li></ul></div>
                 </div>
             </div>
         </div>
