--- a/page1.html
+++ b/page1.html
@@ -58,7 +58,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="mbr-section mbr-section--relative mbr-parallax-background mbr-after-navbar" id="msg-box5-f" data-rv-view="18" style="background-image: url(assets/images/copy-of-roadshow-teaser-3-1586x1008.jpg);">
+<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="mbr-section mbr-section--relative mbr-parallax-background mbr-after-navbar" id="msg-box5-f" data-rv-view="18" style="background-image: url(assets/images/copy-of-roadshow-teaser-3-1586x1008.jpg);">
     
     <div class="mbr-section__container mbr-section__container--isolated container" style="padding-top: 62px; padding-bottom: 62px;">
         <div class="row">
@@ -194,7 +194,7 @@
                         <p class="mbr-contacts__text"><strong>CONTACT</strong><br>
 Email: pamela.rabin@sdcoe.net<br><a href="http://twitter.com/pamrabin" target="_blank" class="text-info">@pamrabin</a><br><br></p>
                     </div>
-                    <div class="col-sm-4"><p class="mbr-contacts__text"><strong>LINKS</strong></p><ul class="mbr-contacts__list"><li><a class="mbr-contacts__link text-white" href="https://mobirise.com/">Website builder</a></li><li><a class="mbr-contacts__link text-white" href="https://mobirise.com/mobirise-free-win.zip">Download for Windows</a></li><li><a class="mbr-contacts__link text-white" href="https://mobirise.com/mobirise-free-mac.zip">Download for Mac</a></li></ul></div>
+                    <div class="col-sm-4"><p class="mbr-contacts__text"><strong>LINKS</strong></p><ul class="mbr-contacts__list"><li><a href="http://innovatesd.org" target="_blank" class="text-info">innovatesd.org</a></li><li><a href="http://summit2020.innovatesd.org" target="_blank" class="text-info">summit2020.innovatesd.org</a></li><li><a href="http://www.sdcoe.net" target="_blank" class="text-info">www.sdcoe.net</a></li></ul></div>
                 </div>
             </div>
         </div>
