--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free site design templates</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background" id="header4-3" data-rv-view="2" style="background-image: url(assets/images/background-roadshow-website-1579x750.jpg);">
+<section class="engine"><a href="https://mobirise.info/f">simple site builder</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background" id="header4-3" data-rv-view="2" style="background-image: url(assets/images/background-roadshow-website-1579x750.jpg);">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center mbr-after-navbar">
         
         <div class="mbr-box__container mbr-section__container container">
@@ -190,7 +190,7 @@
                 </div>
                 <div class="mbr-section__container mbr-section__container--middle">
                     <div class="mbr-header mbr-header--reduce mbr-header--center mbr-header--wysiwyg">
-                        <h3 class="mbr-header__text">EAST COUNTY&nbsp;<br><br>Feb. 13, 2020<br>La Mesa Hidden Stairs &amp; Surf Rider Pizza<br><br>Tour Creation Webinar<br><div>Thinglink VR</div><div>Feb. 25</div></h3>
+                        <h3 class="mbr-header__text">EAST COUNTY&nbsp;<br><br>April 14, 2020<br>La Mesa Hidden tairs &amp; Surf Rider Pizza<br><br>Tour Creation Webinar<br><div>Thinglink VR</div><div>Feb. 25</div></h3>
                     </div>
                 </div>
                 <div class="mbr-section__container mbr-section__container--middle">
