--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
     </div>
 </section>
 
-<section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background" id="header4-3" data-rv-view="50" style="background-image: url(assets/images/background-roadshow-website-1579x750.jpg);">
-    <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center mbr-after-navbar">
+<section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background mbr-after-navbar" id="header4-3" data-rv-view="50" style="background-image: url(assets/images/background-roadshow-website-1579x750.jpg);">
+    <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center">
         <div class="mbr-overlay" style="opacity: 0.4; background-color: rgb(41, 105, 176);"></div>
         <div class="mbr-box__container mbr-section__container container">
             <div class="mbr-box mbr-box--stretched"><div class="mbr-box__magnet mbr-box__magnet--center-center">
