--- a/page1.html
+++ b/page1.html
@@ -143,7 +143,7 @@
                 </div>
                 <div class="mbr-section__container mbr-section__container--last" style="padding-bottom: 31px;">
                     <div class="mbr-article mbr-article--wysiwyg">
-                        <p><a href="https://docs.google.com/document/d/1amKLFlSqbI73qvgY7XqwcUs0WpkK80_vXroCQSI2v1E/edit?usp=sharing" target="_blank">Virtual Tour Lesson Plan</a><br></p>
+                        <p><a href="https://docs.google.com/document/d/1amKLFlSqbI73qvgY7XqwcUs0WpkK80_vXroCQSI2v1E/edit?usp=sharing" target="_blank">Virtual Tour Creation Lesson Plan</a><br></p>
                     </div>
                 </div>
                 
