--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="hamburger-icon"></div>
             </button>
 
-            <ul class="nav-dropdown collapse pull-xs-right navbar-toggleable-sm nav navbar-nav" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">SDCOE</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="#" data-toggle="dropdown-submenu" aria-expanded="false">INNOVATION DIVISION</a><div class="dropdown-menu"><a class="dropdown-item" href="https://mobirise.com/">SDCOE Innovation</a><a class="dropdown-item" href="#" aria-expanded="true">#InnovateSD</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="#" aria-expanded="false" data-toggle="dropdown-submenu">EDUCATIONAL TECHNOLOGY</a><div class="dropdown-menu"><a class="dropdown-item text-primary" href="https://www.sdcoe.net/innovation/educational-technology/Pages/default.aspx" aria-expanded="true" target="_blank">SDCOE Ed Tech</a><a class="dropdown-item" href="#" aria-expanded="true">Ed Tech Events</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="#" aria-expanded="false" data-toggle="dropdown-submenu">ROASHOW</a><div class="dropdown-menu"><a class="dropdown-item" href="#" aria-expanded="true">Home</a><a class="dropdown-item" href="#" aria-expanded="true">Resources</a></div></li></ul>
+            <ul class="nav-dropdown collapse pull-xs-right navbar-toggleable-sm nav navbar-nav" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">SDCOE</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="#" data-toggle="dropdown-submenu" aria-expanded="false">INNOVATION DIVISION</a><div class="dropdown-menu"><a class="dropdown-item" href="https://mobirise.com/">SDCOE Innovation</a><a class="dropdown-item" href="#" aria-expanded="true">#InnovateSD</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="#" aria-expanded="false" data-toggle="dropdown-submenu">EDUCATIONAL TECHNOLOGY</a><div class="dropdown-menu"><a class="dropdown-item text-primary" href="https://www.sdcoe.net/innovation/educational-technology/Pages/default.aspx" aria-expanded="true" target="_blank">SDCOE Ed Tech</a><a class="dropdown-item" href="#" aria-expanded="true">Ed Tech Events</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="#" aria-expanded="false" data-toggle="dropdown-submenu">ROASHOW</a><div class="dropdown-menu"><a class="dropdown-item" href="#" aria-expanded="true">Home</a><a class="dropdown-item text-primary" href="page1.html" aria-expanded="true">Resources</a></div></li></ul>
 
         </div>
 
@@ -66,8 +66,8 @@
 
 </section>
 
-<section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background mbr-after-navbar" id="header4-3" data-rv-view="2" style="background-image: url(assets/images/background-roadshow-website-1579x750.jpg);">
-    <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center">
+<section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background" id="header4-3" data-rv-view="2" style="background-image: url(assets/images/background-roadshow-website-1579x750.jpg);">
+    <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center mbr-after-navbar">
         <div class="mbr-overlay" style="opacity: 0.4; background-color: rgb(41, 105, 176);"></div>
         <div class="mbr-box__container mbr-section__container container">
             <div class="mbr-box mbr-box--stretched"><div class="mbr-box__magnet mbr-box__magnet--center-center">
